Correção na imagem

--- a/style/style.css
+++ b/style/style.css
@@ -45,11 +45,11 @@ section > p{
     margin-right: 5px;
 }
 #img01{
-    background-image: url('/imagens/background001.jpg');
+    background-image: url('../imagens/background001.jpg');
     background-position: right center;
 }
 #img02{
-    background-image: url('/imagens/background002.jpg');
+    background-image: url('../imagens/background002.jpg');
     
 }
 section.normal {
